# IsaacGymEnvs

./: .gitignore  test_digit_env.py
assets/amp/digit_motions/: A_person_is_raising_their_right_hand_up.npy  A_person_is_walking_forward.npy  A_person_is_walking_forward_slowly.npy  A_person_is_walking_forward_slowly_swinging_their_hands_exaggeratedly.npy  A_person_is_waving_to_a_friend_with_thier_right_hand.npy  a person raising their right hand.npy  (+13 more)
assets/mjcf/: amp_humanoid_pybullet.xml
assets/urdf/digit_description-main/: CMakeLists.txt  README.md  package.xml
assets/urdf/digit_description-main/include/digit_description/: digit_constants.h
assets/urdf/digit_description-main/launch/: display.launch  display_arm_traj.launch  display_traj_digit.launch  load.launch
assets/urdf/digit_description-main/rviz/: digit_gui.rviz
assets/urdf/digit_description-main/src/: digit_constants.cpp  viz_lbl.cpp
assets/urdf/digit_description-main/traj/: full_trajectory.txt  full_trajectory2.txt
assets/urdf/digit_description-main/urdf/: digit_capsule_vis.urdf  digit_fixed.urdf  digit_fixed_capsule_collision.urdf  digit_fixed_closed_loop.urdf  digit_fixed_fixed_arm.urdf  digit_float.urdf  digit_float_fixed_arms.urdf  digit_for_drake.urdf  digit_lower_body_capsule_collision.urdf  digit_states_definitions.txt  digit_upper_body_capsule_collision.urdf  digit_xyzyaw.urdf  get_joint_rpy_for_fixed_arms.m
assets/urdf/digit_description-main/utils/: mirror_obj.py
isaacgymenvs/: digit_urdf_vs_mjcf.py  run_policy.py  run_policy_digit_only.py  run_policy_digit_only_mjcf.py
isaacgymenvs/learning/: amp_players.py
isaacgymenvs/tasks/: __init__.py  bullet_collision_test.py  digit_amp.py  digit_amp_base_test.py  humanoid_amp.py  motion_lib debug.ipynb  motion_lib_debug.py  play_digit_motion.py  play_mocap.py  retarget2digit.py  retarget2digit_joint_mapping.py  retarget2digit_pybullet.py  retarget2digit_pybullet_mjcf.py  retarget2digit_pybullet_with_rods.py  retarget2digit_simple.py
(+14 files in other folders)
